# processor-flow

./: .env.example  .gitignore  .gitmodules  Dockerfile  Dockerfile.dev  IMPLEMENTATION.md  LICENCE  README.md  SETUP_SUMMARY.md  pyproject.toml  version.json
.github/workflows/: auto_test.yml  build.yml  ci-cd-workflow.yml
.vops/: service.yaml
charts/processor-flow/: Chart.yaml  values.yaml
charts/processor-flow/templates/: _helpers.tpl  deployment.yaml  service.yaml
py-standards/: .pre-commit-config.yaml  README.md  poetry-to-uv.py  ruff.toml
resources/forge_flows/: FLOW_GUIDE.md  example_custom.py  qa_default.json  qa_default.py  test_simple.json
scripts/: generate_default_flow.py  run_temporal_task.py  verify_setup.py
src/clark_protos/processors/: customWorkflow_pb2.py  customWorkflow_pb2.pyi
src/flow/: __init__.py  activity.py  default_flows.py  flow_loader.py  io_mapping.py  main.py  test_tools.py  workflow.py
tests/: test_utils.py
